--- a/about.qmd
+++ b/about.qmd
@@ -18,4 +18,6 @@ about:
       href: mailto:andy@andyteucher.ca
 ---
 
-About this site
+I am a data scientist and package developer with a passion for teaching others how to use data science tools to make their work more efficient and reproducible. My background is in conservation biology, with an MSc in Ecology from the University of Calgary. I have spent much of my career as a data scientist in government, where I made it my mission to promote and teach open, reproducible data science practices. I have written many R packages for internal use in my teams as well as for a broader audience, with several hosted on CRAN. I especially enjoy developing packages to make it easier to work with spatial data in R. I am a certified Software Carpentry and Data Carpentry instructor, and have led many workshops teaching programming skills to scientists and data professionals.
+
+Please see my [full resume for details of my experience](resources/andy_teucher_resume.pdf).
