--- a/index.qmd
+++ b/index.qmd
@@ -2,7 +2,7 @@
 title: "Andy Teucher"
 ---
 
-I am a biologist turned data scientist, specializing in helping people and organizations build maintainable, reproducible data workflows.
+I am a biologist turned data scientist, specializing in helping people and organizations build maintainable, reproducible data workflows. I am a strong open data and open code advocate, and believe in the value of using and contributing to open-source software.
 
 ## Services
 
@@ -22,19 +22,21 @@ I can also help your organization understand and use open-source licenses for da
 
 ### Teaching and Workshops
 
-I am a passionate and experienced data science and programming instructor and I am certified as a [Carpentries](https://carpentries.org) instructor.
+I am a passionate and experienced data science and programming instructor, and I am certified as a [Carpentries](https://carpentries.org) instructor.
 
 *Example workshop topics include:*
 
 -   Introduction to data science with R
 -   R package development
--   Geospatial data with R
+-   Geospatial data science with R
 -   Git and GitHub
 
 This is not an exhaustive list! Please [reach out](about.qmd) if you have a workshop idea you'd like to discuss.
 
 ### R Package development
 
-I am an expert R package developer. I maintain [four packages on CRAN](packages.qmd) and have contributed to many others. I can help you develop and maintain your R package, or develop a new package for your organization.
+I am an expert R package developer. I maintain [several packages on CRAN](packages.qmd) and have contributed to many others. I can help you develop and maintain your R package, or develop a new package for your organization.
 
 ### Shiny App development
+
+I will help you understand and communicate your data by creating custom interactive dashboards and visualization tools using [Shiny](https://shiny.posit.co/).
