--- a/packages.qmd
+++ b/packages.qmd
@@ -57,6 +57,9 @@ listing:
       - path: "https://github.com/bcgov/rems"
         title: "rems"
         subtitle: "Get Data From British Columbia's Environmental Monitoring System"
+      - path: "https://bcgov.github.io/pahwq"
+        title: "pahwq"
+        subtitle: "Calculate Water Quality Guidelines for PAHs"
       - path: "https://github.com/bcgov/bcgovr"
         title: "bcgovr"
         subtitle: "Set Up of 'bcgov' R Projects & Packages"
