--- a/workshops.qmd
+++ b/workshops.qmd
@@ -23,7 +23,7 @@ your needs.
 
 > _I really loved how hands on this workshop was, I feel like I walked away with a lot of knowledge and I have a template I can look against now._
 
-> _The instructor was well experienced and had an easygoing nature. I felt confident coming back from the workshop and beginning development of my own package. I honestly felt inspired at the end of the day_
+> _The instructor was well experienced and had an easygoing nature. I felt confident coming back from the workshop and beginning development of my own package. I honestly felt inspired at the end of the day._
 
 > _Really impressive work, I was so thrilled to see efforts to keep it inclusive for learners of all types and abilities. Teaching to a room of folks with wildly varied skill sets is not easy!_
 
